--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ avatar: https://pbs.twimg.com/profile_images/1933553512681447424/QgH-jX9c_400x40
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: "" # string, local or CORS resources
+social_preview_image: "/assets/images/social_image_preview/social_image_preview.png" # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
