--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone: Asia/Kolkata
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Aashwin Sharma # the main title
+title: A45hw1n # the main title
 
 tagline: CRTP | Security Researcher | Hacker | Red Teamer # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Red Teaming, CRTP, Cybersecurity, Hackthebox, Tryhackme, blue teaming, penetration testing, programming, security , information security, Active Directory, tombwatcher, heist, ra2, fusioncorp, bountyhunter
+  Red Teaming, Cybersecurity, Hackthebox, Tryhackme, blue teaming, penetration testing, programming, security, information security, Active Directory
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -34,7 +34,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Aashwin Sharma
+  name: A45hw1n
   email: aashwin7.work@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
